@@ -1,3 +1,5 @@
+2006/8/15 -- released version 20060815_trunk
+
 2006/8/14 -- released version 20060814_trunk
 
 2006/8/13 -- released version 20060813_trunk
